--- a/TourGuide/pom.xml
+++ b/TourGuide/pom.xml
@@ -48,21 +48,29 @@
 		</dependency>
 
 		<dependency>
-			<groupId>gpsUtil</groupId>
+			<groupId>local.libs</groupId>
 			<artifactId>gpsUtil</artifactId>
 			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/gpsUtil.jar</systemPath>
+
 		</dependency>
 
 		<dependency>
-			<groupId>tripPricer</groupId>
+			<groupId>local.libs</groupId>
 			<artifactId>tripPricer</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/TripPricer.jar</systemPath>
+
+	</dependency>
 
 		<dependency>
-			<groupId>rewardCentral</groupId>
+			<groupId>local.libs</groupId>
 			<artifactId>rewardCentral</artifactId>
 			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/RewardCentral.jar</systemPath>
 		</dependency>
 	</dependencies>
 
