--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,17 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: |
+        # Find and use the pom.xml file
+        POM_PATH=$(find . -name "pom.xml" -type f)
+        if [ -n "$POM_PATH" ]; then
+          echo "Found pom.xml at: $POM_PATH"
+          mvn -B package --file "$POM_PATH"
+        else
+          echo "Error: No pom.xml file found"
+          exit 1
+        fi
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
